mypy_output.txt
tsercom/util/ip.py:4: error: Library stubs not installed for "psutil"
[import-untyped]
    import psutil
    ^
tsercom/util/ip.py:4: note: Hint: "python3 -m pip install types-psutil"
tsercom/util/ip.py:4: note: (or run "mypy --install-types" to install all missing stub packages)
tsercom/util/ip.py:4: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
tsercom/discovery/mdns/record_publisher.py:67: error: Return type
"Coroutine[Any, Any, None]" of "publish" incompatible with return type "None" in
supertype "MdnsPublisher"  [override]
        async def publish(self) -> None:
        ^
tsercom/discovery/mdns/instance_publisher.py:158: error: Incompatible types in
"await" (actual type "None", expected type "Awaitable[Any]")  [misc]
            await self.__record_publisher.publish()
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tsercom/discovery/mdns/instance_publisher.py:167: error: Unused "type: ignore"
comment  [unused-ignore]
                    await self.__record_publisher.close()  # type: ignore
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 4 errors in 3 files (checked 132 source files)
